修改section 和 article 描述

--- a/2022-02-23.html
+++ b/2022-02-23.html
@@ -12,6 +12,6 @@
   <!-- <section> 章節 <article> 文章，兩者可以互包 -->
     <!-- 雅虎新聞 -->
     <!-- 一篇新聞，裡面文章 <article> 包多個章節 <section> -->
-    <!-- 首頁，不同的章節 <section> 包文章 <article> -->
+    <!-- 首頁，一章節 <section> 包不同文章 <article> -->
 </body>
 </html>
