調整副標題，文字居中

--- a/2022-02-25 hw-card-1.html
+++ b/2022-02-25 hw-card-1.html
@@ -7,25 +7,30 @@
   <title>Document</title>
 </head>
 <style>
+  .sub_title{
+    text-align: center;
+  }
   section{
     width: 1200px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    border: red 1px solid;
   }
   article{
-    border: #fa0 1px dashed;
+    width: 380px;
     text-align: center;
+    padding: 10px;
   }
 
 </style>
 <body>
-  <div>
-    <h2></h2>
-    <p></p>
+  <!-- 副標題-文字區塊 -->
+  <div class="sub_title">
+    <h2>不只停留在教你釣魚，更引領你乘風破浪</h2>
+    <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
   </div>
-  <!-- 一個大題，包不同的主題 -->
+  <!-- 一章節，包3個文章題目 -->
   <section>
     <article>
       <figur>
@@ -33,7 +38,7 @@
       </figur>
       <figcaption>
         <h3>鍛鍊實力，主導學習</h3>
-        <p>品牌財經，言論一塊無線而且，公司面積主。</p>
+        <p>品牌財經，言論一塊無線而且，公司面積主。線而且，公司面積主。</p>
       </figcaption>
     </article>
 
@@ -42,8 +47,8 @@
         <img src="https://picsum.photos/300/300/?random=2">
       </figur>
       <figcaption>
-        <h3>鍛鍊實力，主導學習</h3>
-        <p>品牌財經，言論一塊無線而且，公司面積主。</p>
+        <h3>完整規劃，絕不漏接</h3>
+        <p>品牌財經，言論一塊無線而且，公司面積主。而且，公司面積主。</p>
       </figcaption>
     </article>
 
@@ -52,8 +57,8 @@
         <img src="https://picsum.photos/300/300/?random=3">
       </figur>
       <figcaption>
-        <h3>鍛鍊實力，主導學習</h3>
-        <p>品牌財經，言論一塊無線而且，公司面積主。</p>
+        <h3>挑戰困境，突破職涯</h3>
+        <p>品牌財經，言論一塊無線而且，公司面積主。品牌財經，言論一塊無線而且，公司面積主。</p>
       </figcaption>
     </article>
   </section> 
