變更第一列的資料

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -9,13 +9,13 @@
 
 <body>
 
-  <table border="1", width=500>
+  <table border="1" width="500">
     <thead>
       <tr>
-        <td>oaoa</td>
-        <td>oaoa</td>
-        <td>oaoa</td>
-        <td>oaoa</td>
+        <th scope="col">姓名</th>
+        <th scope="col">英文</th>
+        <th scope="col">數學</th>
+        <th scope="col">國文</th>
       </tr>
     </thead>
 
