依語言方向 和 scope = row, 變更資料內容

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -21,14 +21,14 @@
 
     <tbody>
       <tr>
-        <td>oaoa</td>
+        <th scope="row">小明</th>
         <td>oaoa</td>
         <td>oaoa</td>
         <td>oaoa</td>
       </tr>
 
       <tr>
-        <td>oaoa</td>
+        <th scope="row">小英</th>
         <td>oaoa</td>
         <td>oaoa</td>
         <td>oaoa</td>
@@ -37,7 +37,7 @@
 
     <tfoot>
       <tr>
-        <td>oaoa</td>
+        <th scope="row">小強</th>
         <td>oaoa</td>
         <td>oaoa</td>
         <td>oaoa</td>
