新增一列資料

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -42,6 +42,13 @@
         <td>oaoa</td>
         <td>oaoa</td>
       </tr>
+
+      <tr>
+        <th scope="row">小強</th>
+        <td>oaoa</td>
+        <td>oaoa</td>
+        <td>oaoa</td>
+      </tr>
     </tfoot>
   </table>
 
