rowsapn 合併（列）儲存格

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -37,14 +37,13 @@
 
     <tfoot>
       <tr>
-        <th scope="row">小強</th>
+        <th scope="row" rowspan="2">小強</th>
         <td>oaoa</td>
         <td>oaoa</td>
         <td>oaoa</td>
       </tr>
 
       <tr>
-        <th scope="row">小強</th>
         <td>oaoa</td>
         <td>oaoa</td>
         <td>oaoa</td>
