colsapn 合併（跨欄）儲存格

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -23,8 +23,7 @@
       <tr>
         <th scope="row">小明</th>
         <td>oaoa</td>
-        <td>oaoa</td>
-        <td>oaoa</td>
+        <td colspan="2">oaoa</td>
       </tr>
 
       <tr>
