rowspan and colsapn 合併（跨列＋跨欄）儲存格

--- a/2022-02-25-table.html
+++ b/2022-02-25-table.html
@@ -23,13 +23,11 @@
       <tr>
         <th scope="row">小明</th>
         <td>oaoa</td>
-        <td colspan="2">oaoa</td>
+        <td rowspan="2" colspan="2">oaoa</td>
       </tr>
 
       <tr>
         <th scope="row">小英</th>
-        <td>oaoa</td>
-        <td>oaoa</td>
         <td>oaoa</td>
       </tr>
     </tbody>
