--- a/2022-03-01 header-tags.html
+++ b/2022-03-01 header-tags.html
@@ -11,5 +11,15 @@
   <!-- 如何使用 h1 ~ h6 的語意，才是關鍵！-->
   <!-- 一篇文章，一個主要標題；一篇網路文件，一個h1 -->
   <!-- 標題不要跳階層，什麼是跳階層？ -->
+  <!-- NG, h1 直接跳 h3 -->
+  <h1>百大 DJ 排名</h1>
+  <h3> Tom.d</h3>
+  <hr>
+  <!-- good 順序 -->
+  <!-- h1 接續 h2 接續 h3 ... -->
+  <h1>世界十大美景</h1>
+  <h2>亞洲區</h2>
+  <h3>台灣-太魯閣</h3>
+  
 </body>
 </html>
