文字同等重要，使用span將部分文字區隔，再使用CSS調整外觀

--- a/2022-03-01 header-tags.html
+++ b/2022-03-01 header-tags.html
@@ -20,6 +20,10 @@
   <h1>世界十大美景</h1>
   <h2>亞洲區</h2>
   <h3>台灣-太魯閣</h3>
-  
+  <!-- 表示文字同等重要，裝飾文字內容，可以用： -->
+  <h3>
+    <span>HTML/CSS 講師</span>
+    Amos
+  </h3>
 </body>
 </html>
