ul 和 li 改用 div，達到項目橫排效果

--- a/2022-02-28 holiday-hw-1.html
+++ b/2022-02-28 holiday-hw-1.html
@@ -6,6 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>加碼禮</title>
 </head>
+<style>
+  .wrap{
+    width: 1200px;
+    margin: auto;
+    border: 1px #fa0 solid;
+  }
+  .text{
+    border: 1px #000 solid;
+  }
+  .list{
+    border: 1px #0f0 solid;
+    display: flex;
+  }
+ 
+  .link{
+    border: steelblue 1px solid;
+  }
+
+</style>
 <body>
   <div class="wrap">
     <div class="text">
@@ -14,23 +33,24 @@
         推薦成功開戶三重送
       </h2>
     </div>
-  <div class="list">
-    <ul>
-      <li>
+
+    <div class="list">
+      <div class="plus">
         <h3>獨享加倍送</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。</p>
-      </li>
-      <li>
+      </div>
+
+      <div class="cash">
         <h3>轉帳拿現金</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。<span>(下面樣提出畢業特徵風險懷疑，贏得試試。)</span></p>
-      </li>
-      <li>
+      </div>
+
+      <div class="visa">
         <h3>刷卡享優惠</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。<span>(下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。)</span></p>
-      </li>
-    </ul>
+      </div>
   </div>
-  <div>
+  <div class="link">
     <a href="https://www.w3schools.com/cssref/css_default_values.asp">立即推薦></a>
     <a href="https://www.google.com/">瞭解更多></a>
   </div>
