cash 加上邊框線

--- a/2022-02-28 holiday-hw-1.html
+++ b/2022-02-28 holiday-hw-1.html
@@ -10,18 +10,27 @@
   .wrap{
     width: 1200px;
     margin: auto;
-    border: 1px #fa0 solid;
+    background-color: #f00;
   }
   .text{
-    border: 1px #000 solid;
+    text-align: center;
   }
   .list{
-    border: 1px #0f0 solid;
     display: flex;
+    color: white;
   }
+  .bonus{
+    width: 380px;
+    margin: 10px;
+  }
+  .cash{
+    border-left: #000 2px solid;
+    border-right: #000 2px solid;
+  }
+  
  
   .link{
-    border: steelblue 1px solid;
+    text-align: center;
   }
 
 </style>
@@ -35,18 +44,18 @@
     </div>
 
     <div class="list">
-      <div class="plus">
-        <h3>獨享加倍送</h3>
+      <div class="bonus plus">
+        <h3>1 獨享加倍送</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。</p>
       </div>
 
-      <div class="cash">
-        <h3>轉帳拿現金</h3>
+      <div class="bonus cash">
+        <h3>2 轉帳拿現金</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。<span>(下面樣提出畢業特徵風險懷疑，贏得試試。)</span></p>
       </div>
 
-      <div class="visa">
-        <h3>刷卡享優惠</h3>
+      <div class="bonus visa">
+        <h3>3 刷卡享優惠</h3>
         <p>是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。 下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。是有婦女排行榜一套區域全球，報導本類這種陽光長度，大大顧問。<span>(下面樣子付出對手法院背後大全提出畢業特徵風險懷疑，贏得試試。)</span></p>
       </div>
   </div>
