--- a/2022-02-28 holiday-hw-1.html
+++ b/2022-02-28 holiday-hw-1.html
@@ -20,8 +20,10 @@
     color: white;
   }
   .bonus{
-    width: 380px;
+    width: 360px;
     margin: 10px;
+    padding: 10px;
+
   }
   .cash{
     border-left: #000 2px solid;
