--- a/2022-02-28 holiday-hw-2.html
+++ b/2022-02-28 holiday-hw-2.html
@@ -6,38 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FlyGo</title>
 </head>
+<style>
+  .text{
+    border: tomato 1px solid;
+  }
+  .bonus{
+    border: steelblue 1px solid;
+  }
+  .container{
+    border: springgreen 1px dashed;
+  }
+
+</style>
 <body>
   
   <article class="wrap">
     <section class="text">
-      <h2></h2>
-      <p></p>
-      <a href=""></a>
+      <h2>一張FlyGo帶你在國外走透透</h2>
+      <p>指定精選通路最高5%，海外最高3%無上限</p>
+      <a href="#">立即開戶擁有</a>
     </section>
 
     <section class="bonus">
-      <div class="fly">
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-        <p></p>
-        <p></p>
+      <div class="container fly">
+        <img src="https://picsum.photos/100/100/?random=2" alt="帶你飛">
+        <h3>海外消費首選最高3%回饋無上限</h3>
+        <p>建設詢問，可是有限輸入經典，網遊自行資產印象運作留在，據說。</p>
+        <p>調整經營引起一股目的人物註冊時間，答應。</p>
+        <p>我是就在看見，利益。</p>
       </div>
 
-      <div class="market">
-        <img src="" alt="">
-        <h3></h3>
-        <p><span> <a href=""></a> </span></p>
-        <p></p>
+      <div class="container market">
+        <img src="https://picsum.photos/100/100/?random=4" alt="通路">
+        <h3>指定精選通路消費最高5%回饋</h3>
+        <p>部門實用購買未來金融正好飛機影片他不，是他生態制定溫暖全球也想比較徹。，是他生態制定溫暖全球也想<span> <a href="">查看通路列表及相關限制></a> </span></p>
+        <p>使得字元輔助不夠探索思維光碟周圍選項專題突出歐美引擎一。</p>
       </div>
 
-      <div class="ticket">
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-        <p></p>
+      <div class="container ticket">
+        <img src="https://picsum.photos/100/100/?random=6" alt="機票">
+        <h3>機票刷 FlyGo 保障最高3000萬</h3>
+        <p>農業點擊被人可是立刻，把握出。</p>
+        <p>農業點擊被人可是立刻，</p>
       </div>
-      
+
     </section>
   </article>
   
