調整css，去除輔助線

--- a/2022-02-28 holiday-hw-2.html
+++ b/2022-02-28 holiday-hw-2.html
@@ -7,14 +7,22 @@
   <title>FlyGo</title>
 </head>
 <style>
-  .text{
-    border: tomato 1px solid;
+  .wrap{
+    width: 1200px;
+    margin: auto;
   }
-  .bonus{
-    border: steelblue 1px solid;
+  .text{
+    margin-left: 200px;
+    margin-bottom: 50px;
   }
   .container{
-    border: springgreen 1px dashed;
+    display: flex;
+  }
+  .bonus{
+    width: 380px;
+    margin: 0 auto;
+    padding: 10px;
+    text-align: center;
   }
 
 </style>
@@ -27,8 +35,8 @@
       <a href="#">立即開戶擁有</a>
     </section>
 
-    <section class="bonus">
-      <div class="container fly">
+    <section class="container">
+      <div class="bonus fly">
         <img src="https://picsum.photos/100/100/?random=2" alt="帶你飛">
         <h3>海外消費首選最高3%回饋無上限</h3>
         <p>建設詢問，可是有限輸入經典，網遊自行資產印象運作留在，據說。</p>
@@ -36,14 +44,14 @@
         <p>我是就在看見，利益。</p>
       </div>
 
-      <div class="container market">
+      <div class="bonus market">
         <img src="https://picsum.photos/100/100/?random=4" alt="通路">
         <h3>指定精選通路消費最高5%回饋</h3>
         <p>部門實用購買未來金融正好飛機影片他不，是他生態制定溫暖全球也想比較徹。，是他生態制定溫暖全球也想<span> <a href="">查看通路列表及相關限制></a> </span></p>
         <p>使得字元輔助不夠探索思維光碟周圍選項專題突出歐美引擎一。</p>
       </div>
 
-      <div class="container ticket">
+      <div class="bonus ticket">
         <img src="https://picsum.photos/100/100/?random=6" alt="機票">
         <h3>機票刷 FlyGo 保障最高3000萬</h3>
         <p>農業點擊被人可是立刻，把握出。</p>
