新增-各式按鈕

--- a/2022-03-02 day4-form-2.html
+++ b/2022-03-02 day4-form-2.html
@@ -98,9 +98,9 @@
             </select>
         </div>
 
-
-
-
+        <!-- 送出鈕 -->
+        <input type="submit" value="送出！">
+        <input type="reset">
         <button>送出</button>
     </form>
 
