--- a/2022-03-02 day4-css2.html
+++ b/2022-03-02 day4-css2.html
@@ -12,7 +12,10 @@
       color: red;
       font-size: 20px;
     }
-    
+    /* 選取器變化 */
+    p:first-of-type{
+      color: royalblue;
+    }
   </style>
   <h1>title</h1>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi iusto sit aperiam! Soluta, quibusdam aperiam et eos ad error? Dolor voluptatum ducimus odio perferendis quod sint, quae esse natus ipsam?</p>
