選取同一物件時, id 的權重大於 class

--- a/2022-03-04 day5.html
+++ b/2022-03-04 day5.html
@@ -6,8 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- 目標越明確，優先權越高 -->
+  <style>
+    #header-tag{
+      color: red ;
+    }
+    .header-tag{
+      color: royalblue;
+    }
+  </style>
 </head>
 <body>
+  <h1 class="header-tag" id="header-tag">hi</h1>
   
 </body>
 </html>
