優先權順序，由大至小 id > class > tag > * ，目標越明確，優先權越高

--- a/2022-03-04 day5.html
+++ b/2022-03-04 day5.html
@@ -13,10 +13,13 @@
     .header-tag{
       color: royalblue;
     }
+    *{
+      color: brown;
+    }
   </style>
 </head>
 <body>
   <h1 class="header-tag" id="header-tag">hi</h1>
-  
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis possimus dolores ducimus error maxime nemo explicabo illum dicta eum omnis quod atque minus, tempore cupiditate, harum odio repudiandae dignissimos placeat!</p>
 </body>
 </html>
