一個頁面，不要使用同樣id名稱

--- a/2022-03-04 day5 select-weight-2.html
+++ b/2022-03-04 day5 select-weight-2.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <!-- 算分數，只是示意，並非十進位；也就是說，一個tag一分 不等於 十個tag等於10分 -->
+
+  <!-- 一個頁面，不要使用同樣id名稱，使用 id 套用樣式沒關係，但是對程式執行有關係，第一個 id 執行程式後，第二個同名稱 id 不執行程式！ -->
 </body>
 </html>
