reset使用萬用選取器

--- a/2022-03-04 day5 reset.html
+++ b/2022-03-04 day5 reset.html
@@ -8,9 +8,17 @@
   <!-- css reset 有兩種 -->
   <!-- 第一種： Normalize -->
   <!-- https://meyerweb.com/eric/tools/css/reset/ -->
-  <link rel="stylesheet" href="Normalize.css">
+  <!-- <link rel="stylesheet" href="Normalize.css"> -->
   <style>
-
+    /* 第二種： 萬用選取器 */
+    /* 影響層面太大，專案不使用 */
+    *{
+      margin: 0;
+      padding: 0;
+      font-style: 16px;
+      line-height: 1;
+      font-weight: normal;
+    }
   </style>
 </head>
 <body>
