最小變動 link normalize.css

--- a/2022-03-04 day5 reset.html
+++ b/2022-03-04 day5 reset.html
@@ -4,21 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Reset 差異</title>
   <!-- css reset 有兩種 -->
-  <!-- 第一種： Normalize -->
+  <!-- 第一種： Reset CSS -->
   <!-- https://meyerweb.com/eric/tools/css/reset/ -->
-  <!-- <link rel="stylesheet" href="Normalize.css"> -->
+  <!-- <link rel="stylesheet" href="reset.css"> -->
+  <!-- 第二種：Normalize -->
+  <link rel="stylesheet" href="normalize.css">
   <style>
-    /* 第二種： 萬用選取器 */
+    /* 萬用選取器: reset */
     /* 影響層面太大，專案不使用 */
+    /*     
     *{
       margin: 0;
       padding: 0;
       font-style: 16px;
       line-height: 1;
       font-weight: normal;
-    }
+    } */
+
   </style>
 </head>
 <body>
