content box 寬度仍是200px，加上邊框線20px，僅僅改變div的寬度，由200px -> 240px

--- a/2022-03-04 day5 box model.html
+++ b/2022-03-04 day5 box model.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>box model</title>
+  <!-- 使用中文字為例，中文字屬方正字 -->
   <style>
     *{
       margin: 0;
@@ -15,6 +16,7 @@
       width: 200px;
       font-size: 20px;
       background-color: #fa0;
+      border: 20px solid red;
     }
   </style>
 </head>
