--- a/2022-03-04 day5 box model.html
+++ b/2022-03-04 day5 box model.html
@@ -17,6 +17,7 @@
       font-size: 20px;
       background-color: #fa0;
       border: 20px solid red;
+      padding: 20px;
     }
   </style>
 </head>
