--- a/2022-03-04 day5 box model.html
+++ b/2022-03-04 day5 box model.html
@@ -18,6 +18,7 @@
       background-color: #fa0;
       border: 20px solid red;
       padding: 20px;
+      margin: 20px;
     }
   </style>
 </head>
