--- a/2022-03-04 day5 box model.html
+++ b/2022-03-04 day5 box model.html
@@ -13,12 +13,12 @@
       list-style: none;
     }
     .box{
-      width: 200px;
+      width: 200px; /*content box*/
       font-size: 20px;
       background-color: #fa0;
-      border: 20px solid red;
-      padding: 20px;
-      margin: 20px;
+      border: 20px solid red; /*border box*/
+      padding: 20px; /*padding box*/
+      margin: 20px; /*margin box*/
     }
   </style>
 </head>
