box-sizing 為 border-box時，意指寬度200px 給 border 使用，因此 content box的寬度縮小為 120px (200px - 40px - 40px)

--- a/2022-03-04 day5 box model.html
+++ b/2022-03-04 day5 box model.html
@@ -19,6 +19,7 @@
       border: 20px solid red; /*border box*/
       padding: 20px; /*padding box*/
       margin: 20px; /*margin box*/
+      box-sizing: border-box;
     }
   </style>
 </head>
