inline 是行物件，無法設定寬跟高; inline 接續其他的行物件

--- a/2022-03-04 day5 inline and block.html
+++ b/2022-03-04 day5 inline and block.html
@@ -19,11 +19,21 @@
       width: 300px;
       background-color: #fa0;
     }
+    span{
+      background-color: #f0f;
+      width: 100px;
+    }
   </style>
 </head>
 <body>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda odio a eius nemo, provident vero facilis magnam ab optio earum explicabo sit ducimus quos, aspernatur magni recusandae est necessitatibus.</p>
   <div>div</div>
+
+  <span>span qq</span>
+  <span>span qq</span>
+  <span>span qq</span>
+  <span>span qq</span>
+  <span>span qq</span>
 
 </body>
 </html>
