padding-左右 對 span 是有效

--- a/2022-03-04 day5 inline and block.html
+++ b/2022-03-04 day5 inline and block.html
@@ -24,18 +24,19 @@
       width: 100px;
       margin-left: 30px;
       margin-top: 80px;
+      padding-left: 30px;
+      padding-right: 30px;
     }
   </style>
 </head>
 <body>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda odio a eius nemo, provident vero facilis magnam ab optio earum explicabo sit ducimus quos, aspernatur magni recusandae est necessitatibus.</p>
   <div>div</div>
-
   <span>span qq</span>
   <span>span qq</span>
   <span>span qq</span>
   <span>span qq</span>
   <span>span qq</span>
-
+  <div>div</div>
 </body>
 </html>
