導覽列的超連結背景色彩透過padding增高，但是內容卻沒有將下方的物件推下去

--- a/2022-03-04 day5 inline and block.html
+++ b/2022-03-04 day5 inline and block.html
@@ -11,6 +11,13 @@
       padding: 0;
       list-style: none;
     }
+    nav{
+      background-color: #f00;
+    }
+    nav a {
+      background-color: #fa0;
+      padding: 30px;
+    }
     p{
       width: 400px;
       background-color: #aaa;
@@ -30,6 +37,12 @@
   </style>
 </head>
 <body>
+  <nav>
+    <a href="#">link</a>
+    <a href="#">link</a>
+    <a href="#">link</a>
+    <a href="#">link</a>
+  </nav>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda odio a eius nemo, provident vero facilis magnam ab optio earum explicabo sit ducimus quos, aspernatur magni recusandae est necessitatibus.</p>
   <div>div</div>
   <span>span qq</span>
