--- a/2022-03-04 day5 inline and block.html
+++ b/2022-03-04 day5 inline and block.html
@@ -13,9 +13,11 @@
     }
     nav{
       background-color: #f00;
+      height: 80px;
     }
     nav a {
       background-color: #fa0;
+      font-size: 20px;
       padding: 30px;
     }
     p{
