--- a/2022-03-04 day5 inline between inline.html
+++ b/2022-03-04 day5 inline between inline.html
@@ -49,8 +49,7 @@
   </nav>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda odio a eius nemo, provident vero facilis magnam ab optio earum explicabo sit ducimus quos, aspernatur magni recusandae est necessitatibus.</p>
   <div>div</div>
-  <span>span qq</span>
-  <span>span qq</span>
+  <span>span qq</span><span>span qq</span>
   <span>span qq</span>
   <span>span qq</span>
   <span>span qq</span>
