--- a/2022-03-04 day5 inline between inline.html
+++ b/2022-03-04 day5 inline between inline.html
@@ -33,10 +33,15 @@
     span{
       background-color: #f0f;
       width: 100px;
-      margin-left: 30px;
-      margin-top: 80px;
       padding-left: 30px;
       padding-right: 30px;
+    }
+    .tsao{
+      width: 600px;
+      font-size: 0;
+    }
+    .tsao span{
+      font-size: 16px;
     }
   </style>
 </head>
@@ -49,10 +54,14 @@
   </nav>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda odio a eius nemo, provident vero facilis magnam ab optio earum explicabo sit ducimus quos, aspernatur magni recusandae est necessitatibus.</p>
   <div>div</div>
-  <span>span qq</span><span>span qq</span>
-  <span>span qq</span>
-  <span>span qq</span>
-  <span>span qq</span>
+  <div class="tsao">
+    <span>span</span>
+    <span>span</span>
+    <span>span</span>
+    <span>span</span>
+    <span>span</span>
+  </div>
+  
   <div>div</div>
 </body>
 </html>
