flex-direction 改變主軸的顯示方向

--- a/2022-03-07 day6 flex-1.html
+++ b/2022-03-07 day6 flex-1.html
@@ -11,9 +11,11 @@
       height: 600px;
       background-color: #aaa;
       display: flex;
+      flex-direction: column-reverse;
     }
     .item{
       width: 100px;
+      height: 100px;
       background-color: #fa0;
       margin: 10px;
       font-size: 32px;
