--- a/2022-03-07 day6 flex-1.html
+++ b/2022-03-07 day6 flex-1.html
@@ -11,13 +11,14 @@
       height: 600px;
       background-color: #aaa;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: row;
+      justify-content: flex-end;
     }
     .item{
       width: 100px;
       height: 100px;
       background-color: #fa0;
-      margin: 10px;
+      margin: 2px;
       font-size: 32px;
     }
   </style>
