justify-content: space-...，分配剩餘空間，均分space-evenly

--- a/2022-03-07 day6 flex-1.html
+++ b/2022-03-07 day6 flex-1.html
@@ -11,8 +11,8 @@
       height: 600px;
       background-color: #aaa;
       display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
+      flex-direction: column;
+      justify-content: space-evenly;
     }
     .item{
       width: 100px;
