flex-wrap: wrap，換列時，換列換到交叉軸

--- a/2022-03-07 day6 flex-1.html
+++ b/2022-03-07 day6 flex-1.html
@@ -12,7 +12,8 @@
       background-color: #aaa;
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
+      /* justify-content: space-evenly; */
+      flex-wrap: wrap;
     }
     .item{
       width: 100px;
@@ -28,6 +29,12 @@
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+
+
+
   </div>
 </body>
 </html>
