設置語意架構

--- a/2022-03-08 hw-1.html
+++ b/2022-03-08 hw-1.html
@@ -8,6 +8,73 @@
   <link rel="stylesheet" href="2022-03-08 hw-1.css">
 </head>
 <body>
+  <div class="wrap">
+    <section class="title">
+      <h2>
+        <span></span>
+      </h2>
+      <p></p>
+    </section>
+
+    <section class="tool">
+      <article class="reverse">
+
+        <section class="visit">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="visitImg">
+
+        </div>
+
+        <section class="save">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="saveImg">
+
+        </div>
+
+        <section class="explore">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="exploreImg">
+
+        </div>
+      </article>
+
+      <article class="img">
+
+      </article>
+
+      <article class="obverse">
+        <section class="organize">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="organizeImg">
+
+        </div>
+
+        <section class="communicate">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="communicateImg">
+
+        </div>
+
+        <section class="share">
+          <h3></h3>
+          <p></p>
+        </section>
+        <div class="shareImg">
+
+        </div>
+      </article>
+    </section>
+  </div>
   
 </body>
 </html>
