--- a/2022-03-08 hw-1.html
+++ b/2022-03-08 hw-1.html
@@ -11,66 +11,67 @@
   <div class="wrap">
     <section class="title">
       <h2>
-        <span></span>
+        Why Traders
+        <span>Choose Us</span>
       </h2>
-      <p></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, obcaecati! Ex voluptates, iste reiciendis sequi at eius rem hic amet tempora consequuntur explicabo deleniti perspiciatis, labore ratione! Alias corrupti dolor quam commodi ducimus asperiores delectus! A enim adipisci culpa cupiditate quae tempore fuga vero! Libero molestiae alias sint quia earum quo, ut quis unde voluptatum at aut eveniet nostrum </p>
     </section>
 
     <section class="tool">
       <article class="reverse">
 
         <section class="visit">
-          <h3></h3>
-          <p></p>
+          <h3>visit</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sint, eveniet obcaecati repudiandae?</p>
         </section>
         <div class="visitImg">
-
+          <img src="https://picsum.photos/100/100/?random=10">
         </div>
 
         <section class="save">
-          <h3></h3>
-          <p></p>
+          <h3>save</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sint, ev</p>
         </section>
         <div class="saveImg">
-
+          <img src="https://picsum.photos/100/100/?random=9">
         </div>
 
         <section class="explore">
-          <h3></h3>
-          <p></p>
+          <h3>explore</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sint, ev</p>
         </section>
         <div class="exploreImg">
-
+          <img src="https://picsum.photos/100/100/?random=8">
         </div>
       </article>
 
       <article class="img">
-
+        <img src="https://picsum.photos/300/900/?random=7">
       </article>
 
       <article class="obverse">
         <section class="organize">
-          <h3></h3>
-          <p></p>
+          <h3>organize</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sint, eveniet obcaecati</p>
         </section>
         <div class="organizeImg">
-
+          <img src="https://picsum.photos/100/100/?random=6">
         </div>
 
         <section class="communicate">
-          <h3></h3>
-          <p></p>
+          <h3>communicate</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sin</p>
         </section>
         <div class="communicateImg">
-
+          <img src="https://picsum.photos/100/100/?random=5">
         </div>
 
         <section class="share">
-          <h3></h3>
-          <p></p>
+          <h3>share</h3>
+          <p>ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sin</p>
         </section>
         <div class="shareImg">
-
+          <img src="https://picsum.photos/100/100/?random=4">
         </div>
       </article>
     </section>
