--- a/2022-03-08 hw-1.html
+++ b/2022-03-08 hw-1.html
@@ -23,7 +23,7 @@
         <section class="visit">
           <div class="visitText">
             <h3>visit</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque laboriosam officia sint, eveniet obcaecati repudiandae?</p>
+            <p>Lorem, ipsum dolor sit amet conser adipisicing elit. Eaque laboriosam  </p>
           </div>
           <div class="visitImg">
             <img src="https://picsum.photos/100/100/?random=10">
