align-content 控制交叉軸(cross axis)的分布，預設 stretch。 可使用flex-start, center 和 flex-end

--- a/2022-03-07 day6 flex-4-align-cntent.html
+++ b/2022-03-07 day6 flex-4-align-cntent.html
@@ -18,7 +18,11 @@
       display: flex;
       flex-wrap: wrap;
       background-color: #555;
-      align-content: end;
+      /* align-content: stretch; */
+      /* align-content: flex-start; */
+      align-content: center;
+      /* align-content: flex-end; */
+
     }
     .item{
       width: 300px;
