align-content: space-between; 控制交叉軸(cross axis)的空間分布。可使用 space-between, space-around

--- a/2022-03-07 day6 flex-4-align-cntent.html
+++ b/2022-03-07 day6 flex-4-align-cntent.html
@@ -20,8 +20,12 @@
       background-color: #555;
       /* align-content: stretch; */
       /* align-content: flex-start; */
-      align-content: center;
+      /* align-content: center; */
       /* align-content: flex-end; */
+
+      align-content: space-between;
+      /* align-content: space-around; */
+
 
     }
     .item{
@@ -36,6 +40,8 @@
     <div class="item">1AB</div>
     <div class="item">2AB</div>
     <div class="item">3AB</div>
+    <div class="item">3AB</div>
+
 
   </div>
 </body>
