align-content,控制'對齊分布'和'空間分布'無法同時存在，寫在後面的樣式設定 會蓋掉 寫在前面的樣式設定

--- a/2022-03-07 day6 flex-4-align-cntent.html
+++ b/2022-03-07 day6 flex-4-align-cntent.html
@@ -21,12 +21,11 @@
       /* align-content: stretch; */
       /* align-content: flex-start; */
       /* align-content: center; */
-      /* align-content: flex-end; */
+      align-content: flex-end;
 
       align-content: space-between;
       /* align-content: space-around; */
-
-
+      /* align-content,控制'對齊分布'和'空間分布'無法同時存在，寫在後面的樣式設定 會蓋掉 寫在前面的樣式設定 */
     }
     .item{
       width: 300px;
