order 初始值 ＝ 0; ，在相同的order 值 css class 寫在前面的優先

--- a/2022-03-09 day7 flex-8-flex-self.html
+++ b/2022-03-09 day7 flex-8-flex-self.html
@@ -32,6 +32,15 @@
     .child2{
       align-self: center;
     }
+
+    /* order */
+    
+    .child3{
+      order: 0;
+    }
+    .child4{
+      order: 1;
+    }
   </style>
 </head>
 <body>
