屬性值優先權: flex-basis > width, height，主軸目前是row，flex-basis 改變子物件主軸寬度

--- a/2022-03-09 day7 flex-8-flex-self.html
+++ b/2022-03-09 day7 flex-8-flex-self.html
@@ -33,13 +33,10 @@
       align-self: center;
     }
 
-    /* order */
-    
-    .child3{
-      order: 0;
-    }
-    .child4{
-      order: 1;
+    /* 屬性值優先權: Flex-basis > width, height */
+    .child1{
+      flex-basis: 50px;
+      width: 160px;
     }
   </style>
 </head>
