--- a/2022-03-09 day7 position-1-relative.html
+++ b/2022-03-09 day7 position-1-relative.html
@@ -21,8 +21,15 @@
     li:nth-child(20){
       background-color: #fa0;
       position: relative;
-      top: 30px;
-      left: 100px;
+      z-index: 2;
+      /* top: 30px; */
+      /* left: 100px; */
+    }
+
+    li:nth-child(21){
+      margin-left: -30px;
+      position: relative;
+      z-index: 1;
     }
   </style>
 </head>
