使用relative 玩疊疊樂，紅版和灰版使用 inline-block 讓兩區塊併排，再使用relative 調整上右下左，像是在排列板塊的座標位置

--- a/2022-03-10 hw-1-Trangram.html
+++ b/2022-03-10 hw-1-Trangram.html
@@ -22,8 +22,15 @@
       border: springgreen 5px solid;
     }
     .gray{
+      display: inline-block;
       background-color: #aaa;
-      right: -50px;
+      left: 500px;
+      top: 100px;
+    }
+    .red{
+      display: inline-block;
+      background-color: #f00;
+      left: 600px;
       bottom: -100px;
     }
     .blue{
@@ -34,6 +41,7 @@
 </head>
 <body>
   <div class="box gray"></div>
+  <div class="box red"></div>
   <div class="box blue"></div>
 </body>
 </html>
