使用relative 玩疊疊樂，調整綠板塊貼在藍板塊左下緣

--- a/2022-03-10 hw-1-Trangram.html
+++ b/2022-03-10 hw-1-Trangram.html
@@ -36,12 +36,22 @@
     .blue{
       background-color: blue;
     }
-    
+    .green{
+      background-color: green;
+      left: -160px;
+      top: -50px;
+    }
+    /* .yellow{
+      display: inline-block;
+      background-color: yellow;
+    } */
   </style>
 </head>
 <body>
   <div class="box gray"></div>
   <div class="box red"></div>
   <div class="box blue"></div>
+  <div class="box green"></div>
+  <!-- <div class="box yellow"></div> -->
 </body>
 </html>
