--- a/2022-03-10 hw-2-use-border-create-triangle.html
+++ b/2022-03-10 hw-2-use-border-create-triangle.html
@@ -39,8 +39,12 @@
       border-top: transparent 50px solid;
       border-right: turquoise 50px solid;
       border-bottom: transparent 50px solid;
-      /* border-left: transparent 0px solid; */
-
+    }
+    .box4{
+      height: 0;
+      border-top: transparent 50px solid;
+      border-right: turquoise 50px solid;
+      border-bottom: transparent 50px solid;
     }
   </style>
 </head>
@@ -48,5 +52,6 @@
   <div class="box box1"></div>
   <div class="box box2"></div>
   <div class="box box3"></div>
+  <div class="box box4"></div>
 </body>
 </html>
