--- a/2022-03-10 hw-2-use-border-create-triangle.html
+++ b/2022-03-10 hw-2-use-border-create-triangle.html
@@ -46,6 +46,21 @@
       border-right: turquoise 50px solid;
       border-bottom: transparent 50px solid;
     }
+    .box5{
+      background-color: #f00;
+      width: 110px;
+      height: 60px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: space-around;
+    }
+    .triangle{
+      height: 0;
+      border-top: transparent 20px solid;
+      border-left: #fff 50px solid;
+      border-bottom: transparent 20px solid;
+    }
   </style>
 </head>
 <body>
@@ -53,5 +68,8 @@
   <div class="box box2"></div>
   <div class="box box3"></div>
   <div class="box box4"></div>
+  <div class="box box5">
+    <div class="triangle"></div>
+  </div>
 </body>
 </html>
