box-6 類 youtube icon, use relative 調整三角形位置

--- a/2022-03-10 hw-2-use-border-create-triangle.html
+++ b/2022-03-10 hw-2-use-border-create-triangle.html
@@ -61,6 +61,18 @@
       border-left: #fff 50px solid;
       border-bottom: transparent 20px solid;
     }
+    .box6{
+      background-color: #f00;
+      width: 110px;
+      height: 60px;
+    }
+    .rel{
+      width: 0;
+      position: relative;
+      top: 20%;
+      margin-left: 35%;
+    }
+    
   </style>
 </head>
 <body>
@@ -70,6 +82,9 @@
   <div class="box box4"></div>
   <div class="box box5">
     <div class="triangle"></div>
+  </div>
+  <div class="box box6">
+    <div class="triangle rel"></div>
   </div>
 </body>
 </html>
