box-6 類 youtube icon, use absolute 調整三角形位置

--- a/2022-03-10 hw-2-use-border-create-triangle.html
+++ b/2022-03-10 hw-2-use-border-create-triangle.html
@@ -72,6 +72,13 @@
       top: 20%;
       margin-left: 35%;
     }
+
+    .abs{
+      width: 0;
+      position: absolute;
+      margin-left: 30px;
+      margin-top: 10px;
+    }
     
   </style>
 </head>
@@ -85,6 +92,10 @@
   </div>
   <div class="box box6">
     <div class="triangle rel"></div>
+  </div>
+
+  <div class="box box6">
+    <div class="triangle abs"></div>
   </div>
 </body>
 </html>
