--- a/2022-03-11 hw-4-flex-grow-add-text.html
+++ b/2022-03-11 hw-4-flex-grow-add-text.html
@@ -19,11 +19,11 @@
     .title{
       display: flex;
       flex-wrap: wrap;
-      border: tomato 1px solid;
+      /* border: tomato 1px solid; */
+      margin-bottom: 5px;
     }
     .h3{
       flex-grow: 1;
-
     }
     .line{
       margin-top: auto;
@@ -33,8 +33,11 @@
       border-top: 1px #000 solid;
       flex-grow: 3;
     }
-    .descript{
+    /* .descript{
       border: peru 1px solid;
+    } */
+    a{
+      font-size: 12px;
     }
 
   </style>
@@ -53,6 +56,9 @@
       <h4>墮天</h4>
       <p>玉藻前爆發自身力量，對全體敵方單位造成攻擊131%的傷害，若目標生命低於50%，則傷害減少15%。</p>
     </div>
+    
+    <a href="https://www.onmyojigame.com/zh/role/300.html" target="_blank" > 參考：陰陽師-式神錄說明</a>
+    
   </div>
 </body>
 </html>
