相對定位 point, img, bgc 等三個盒子

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -5,30 +5,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>疊疊樂</title>
+  <link rel="stylesheet" href="toyota.css">
 </head>
 <body>
-  <div class="box point">
-    <h2></h2>
-    <p class="slg"></p>
-  </div>
-  
-  <div class="box bgc"></div>
-
-  <div class="box img">
-    <img src="https://picsum.photos/600/400/?random=10">
-    <div class="icon">
-      <div class="triangle"></div>
+  <div class="wrap">
+    <div class="box point">
+      <h2>01 操控樂趣</h2>
+      <p> <span class="slg">人人滿意的駕駛體驗</span>你有各種，優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，所在錯誤忍不住驚訝。</p>
     </div>
-  </div>
+    
+    <div class="box bgc"></div>
 
-  <div class="box descript">
-    <div class="title">
-      <p></p>
-      <div class="line"></div>
+    <div class="box img">
+      <img src="https://picsum.photos/600/400/?random=10">
+      <div class="icon">
+        <div class="triangle"></div>
+      </div>
     </div>
-    <div class="detail">
-      <h3></h3>
-      <p></p>
+
+    <div class="box descript">
+      <div class="title">
+        <p></p>
+        <div class="line"></div>
+      </div>
+      <div class="detail">
+        <h3></h3>
+        <p></p>
+      </div>
     </div>
   </div>
 </body>
