相對定位 descript, 使用 border 畫出標題線段

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -25,12 +25,18 @@
 
     <div class="box descript">
       <div class="title">
-        <p></p>
+        <p>最好的體現，家長環。</p>
         <div class="line"></div>
       </div>
       <div class="detail">
-        <h3></h3>
-        <p></p>
+        <h3>很久圖文。</h3>
+        <p>夢幻第二章提示訊息國有，教材這個需求國。息國有，教材這個需求國。</p>
+
+        <h3>簽名國產建。</h3>
+        <p>不論引起正常醫生如有基礎身上聯合反饋星座代表領先，瀏覽次數。</p>
+
+        <h3>我有此。</h3>
+        <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
       </div>
     </div>
   </div>
