相對定位 icon, 用 border 畫出 youtube icon

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -19,7 +19,7 @@
     <div class="box img">
       <img src="https://picsum.photos/600/400/?random=10">
       <div class="icon">
-        <div class="triangle"></div>
+        <div class="triangle rel"></div>
       </div>
     </div>
 
