新增 02 圖區，02 圖區使用 dir = rtl， descript box 向右移位。思考將 detail box 移位，但不改變文字的撰寫方向

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -40,5 +40,38 @@
       </div>
     </div>
   </div>
+
+  <div class="wrap" dir="rtl">
+    <div class="box point">
+      <h2>02 安全守護</h2>
+      <p> <span class="slg">行車更安心的高剛性車體</span>你有各種，優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，所在錯誤忍不住驚訝。 話題頻道願意，的人。 </p>
+    </div>
+    
+    <div class="box bgc"></div>
+
+    <div class="box img">
+      <img src="https://picsum.photos/600/400/?random=10">
+      <div class="icon">
+        <div class="triangle rel"></div>
+      </div>
+    </div>
+
+    <div class="box descript">
+      <div class="title">
+        <p>最好的體現，家長環。</p>
+        <div class="line"></div>
+      </div>
+      <div class="detail">
+        <h3>很久圖文。</h3>
+        <p>夢幻第二章提示訊息國有，教材這個需求國。息國有，教材這個需求國。</p>
+
+        <h3>簽名國產建。</h3>
+        <p>不論引起正常醫生如有基礎身上聯合反饋星座代表領先，瀏覽次數。</p>
+
+        <h3>我有此。</h3>
+        <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
