img 垂直｜水平 居中，flex + absolute ( TPBR 撐開空間 and marigin: auto )

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -17,10 +17,10 @@
     <div class="bgc"></div>
 
     <div class="img">
-      <img src="https://picsum.photos/id/600/700/525/">
-    </div>
+      <img src="https://picsum.photos/700/525/?random=10">
 
     </div>
+
   </div>
 
   
