--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="descript">
-      <!-- <div class="title">
+      <div class="title">
         <p>最好的體現，家長環。</p>
         <div class="line"></div>
       </div>
@@ -35,7 +35,7 @@
 
         <h3>我有此。</h3>
         <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
-      </div> -->
+      </div>
     </div>
   </div>
 
