.descript 的 margin-top, margin-left 影響 icon 的起始位置，所以將 margin-top, margin-left 更改為 top, left ，便於判斷 icon 的起始位置

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -14,11 +14,9 @@
       <p> </p>
     </div>
     
-
     <div class="img">
       <img src="https://picsum.photos/700/525/?random=10">
       <div class="bgc"></div>
-
     </div>
 
     <div class="descript">
@@ -36,6 +34,10 @@
         <h3>我有此。</h3>
         <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
       </div>
+    </div>
+
+    <div class="icon">
+      <div class="triangle"></div>
     </div>
   </div>
 
