調整 .point 內容，刪除輔助線

--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -11,9 +11,8 @@
   <div class="wrap">
     <div class="point">
       <h2>01 操控樂趣</h2>
-      <p><span class="slg">人人滿意的駕駛體驗</span>你有各種，
-        優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，
-        所在錯誤忍不住驚訝。</p>
+      <p><span class="slg">人人滿意的駕駛體驗</span>透過各種，
+        優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，所在錯誤忍不住驚訝。</p>
     </div>
     
     <div class="img">
