--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="wrap">
+  <div class="wrap w_rev">
     <div class="point">
       <h2>02 安全守護</h2>
       <p><span class="slg">行車更安心的高剛性車體</span>透過各種，
@@ -54,7 +54,7 @@
       <div class="bgc"></div>
     </div>
 
-    <div class="descript">
+    <div class="descript des_rev">
       <div class="title">
         <p>最好的體現，家長環。</p>
         <div class="line"></div>
@@ -66,12 +66,10 @@
         <h3>簽名國產建。</h3>
         <p>不論引起正常醫生如有基礎身上聯合反饋星座代表領先，瀏覽次數。</p>
 
-        <h3>我有此。</h3>
-        <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
       </div>
     </div>
 
-    <div class="icon">
+    <div class="icon i_rev">
       <div class="triangle"></div>
     </div>
   </div>
