--- a/2022-03-11 hw-6-Trangram-2.html
+++ b/2022-03-11 hw-6-Trangram-2.html
@@ -73,5 +73,71 @@
       <div class="triangle"></div>
     </div>
   </div>
+
+  <div class="wrap">
+    <div class="point">
+      <h2>03 乘坐舒適</h2>
+      <p><span class="slg">另人放鬆舒適的車室空間</span>透過各種，
+        優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，所在錯誤忍不住驚訝。</p>
+    </div>
+    
+    <div class="img">
+      <img src="https://picsum.photos/700/525/?random=1">
+      <div class="bgc"></div>
+    </div>
+
+    <div class="descript">
+      <div class="title">
+        <p>最好的體現，家長環。</p>
+        <div class="line"></div>
+      </div>
+      <div class="detail">
+        <h3>很久圖文。</h3>
+        <p>夢幻第二章提示訊息國有，教材這個需求國。息國有，教材這個需求國。</p>
+
+        <h3>簽名國產建。</h3>
+        <p>不論引起正常醫生如有基礎身上聯合反饋星座代表領先，瀏覽次數。</p>
+
+        <h3>我有此。</h3>
+        <p>策劃海外老婆成功工具文章我來動漫負責人我愛基於支持電視劇，公路本網站，出了幾年。</p>
+      </div>
+    </div>
+
+    <div class="icon">
+      <div class="triangle"></div>
+    </div>
+  </div>
+  
+  <div class="wrap w_rev">
+    <div class="point">
+      <h2>04 以人為本</h2>
+      <p><span class="slg">使用者導向的貼心設計</span>透過各種，
+        優點幾次這些共享版這一點，為何沒有任何太多來自驚人有了信箱真實上升賺錢，刺激姑娘，所在錯誤所在錯誤忍</p>
+    </div>
+    
+    <div class="img">
+      <img src="https://picsum.photos/700/525/?random=４">
+      <div class="bgc"></div>
+    </div>
+
+    <div class="descript des_rev">
+      <div class="title">
+        <p>最好的體現，家長環。</p>
+        <div class="line"></div>
+      </div>
+      <div class="detail">
+        <h3>很久圖文。</h3>
+        <p>夢幻第二章提示訊息國有，教材這個需求國。息國有，教材這個需求國。</p>
+
+        <h3>簽名國產建。</h3>
+        <p>不論引起正常醫生如有基礎身上聯合反饋星座代表領先，瀏覽次數。</p>
+
+      </div>
+    </div>
+
+    <div class="icon i_rev">
+      <div class="triangle"></div>
+    </div>
+  </div>
 </body>
 </html>
