父層 (.wrap) 未設定 width, height 時， 子層 (.item) 吃到父層 (.wrap) 的 width, height 都為 0，因此第2區塊的畫面皆無顯示圖塊。 子層 display: inline-block; 因此，看到父層的背景色

--- a/percentage.html
+++ b/percentage.html
@@ -19,13 +19,22 @@
       display: inline-block;
       width: 30%;
       height: 30%;
-      border: tan 1px solid;
+      background-color: #f00;
+    }
+    .nowh{
+      background-color: #0f0;
     }
 
   </style>
 </head>
 <body>
   <div class="wrap">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
+
+  <div class="nowh">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
