驗證 - 子層去除 display: inline-block; ，則 父層的背景色一併消失

--- a/percentage.html
+++ b/percentage.html
@@ -16,7 +16,7 @@
       margin: 10px auto;
     }
     .item{
-      display: inline-block;
+      /* display: inline-block; */
       width: 30%;
       height: 30%;
       background-color: #f00;
