--- a/toyota/margin_auto.html
+++ b/toyota/margin_auto.html
@@ -7,13 +7,14 @@
   <title>margin: auto</title>
   <link rel="stylesheet" href="../reset.css">
   <!-- 為什麼 div 物件用內容撐開的 width 使用 margin: auto; 時，無法置中， 需要將 div 物件設定 width，才能使用 margin: auto; 達成置中？ -->
+  <!-- 設定 div 的 width 後，才能使 margin: auto 控制 div 的左右空間 -->
   <style>
     .text{
-      /* width: 600px; */
       background-color: #fa0;
       border: springgreen 2px dashed;
       font-size: 36px;
-      /* margin: 0 auto; */
+      width: 600px;
+      margin: 0 auto;
     }
   </style>
 </head>
