--- a/toyota/descript.html
+++ b/toyota/descript.html
@@ -16,17 +16,32 @@
       padding: 10px;
       line-height: 30px;
     }
-    .text h2{
+    .slg{
+      color: brown;
+      font-size: 24px;
+      padding: 10px;
+      display: flex;
+    }
+    .slg::after{
+      content: "";
+      flex-grow: 1;
+      border-bottom: brown 1px solid;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: 20px;
+    }
+    .text .singer h2{
       display: inline-block;
       padding: 2px;
       font-size: 24px;
       background-color: #fff;
     }
-    .text p{
+    .text .singer p{
       font-size: 18px;
       text-indent: 1em;
       position: relative;
     }
+    /* 偽選取器-項目符號-調整位置 */
     .text p::before{
       display: inline-block;
       content: "X";
@@ -52,12 +67,15 @@
 </head>
 <body>
   <div class="text">
-    <h2>蘇珊大嬸</h2>
-    <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
-    <h2>湯姆大叔</h2>
-    <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
-    <h2>捷克</h2>
-    <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
+    <div class="slg">超級偶像杯</div>
+    <div class="singer">
+      <h2>蘇珊大嬸</h2>
+      <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
+      <h2>湯姆大叔</h2>
+      <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
+      <h2>捷克</h2>
+      <p>維修細胞觀點在這個小時大戰，西安見過成本等待興趣臺灣民眾網際高興是怎麼便是，考。</p>
+    </div>
   </div>
 </body>
 </html>
