slg::after ，線條垂直- 水平居中方法二，flex + align-items

--- a/toyota/descript.html
+++ b/toyota/descript.html
@@ -21,13 +21,14 @@
       font-size: 24px;
       padding: 10px;
       display: flex;
+      align-items: center;
     }
     .slg::after{
       content: "";
       flex-grow: 1;
       border-bottom: brown 1px solid;
-      margin-top: auto;
-      margin-bottom: auto;
+      /* margin-top: auto;
+      margin-bottom: auto; */
       margin-left: 20px;
     }
     .text .singer h2{
