新增 一 class name 供空白標題之標籤使用
使用一個 class name 讓標籤有意義
省下了一個程式判斷式，判斷內容是否為空值

--- a/marathon/empty.html
+++ b/marathon/empty.html
@@ -13,6 +13,17 @@
       height: 30px;
       background-color: brown;
     }
+    .title{
+      width: 100px;
+      height: 40px;
+      background-color: #fa0;
+      text-align: center;
+      line-height: 40px;
+      margin: 5px;
+    }
+    .title:empty{
+      height: 40px;
+    }
   </style>
 </head>
 <body>
@@ -25,6 +36,10 @@
   <span></span>
   <span>3</span>
   <span> </span>
+
+  <div class="title">代號：9527</div>
+  <div class="title"></div>
+  <div class="title">石榴姐</div>
 
 </body>
 </html>
