--- a/marathon/float-card.html
+++ b/marathon/float-card.html
@@ -12,13 +12,13 @@
 </head>
 <body>
   <div class="card_trips">
-    <h3></h3><small></small>
-    <a href="#">
-      <p class="icon_title"></p>
-      <img src="" alt="">
-      <p class="bold"></p>
-      <p class="thin">
-        <span class="date"></span>
+    <h3>旅行者</h3><small>能做什麼 旅行者能做什麼</small>
+    <a class="card_click" href="#">
+      <p class="icon_title">其他</p>
+      <img src="./asset 27.jpeg" alt="">
+      <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
+      <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
+        <span class="date">2022/01/28</span>
       </p>
     </a>
   </div>
