新增 pink ，檢視 float 特性
- css  選取器先後順序，無關 float 畫面顯示
- html element 排序順序，有關 float 畫面顯示，程式編號越小越優先
- 本例的 程式編號順序由小到大：brown -> blue -> pink;  float 設定：left, right, right; 顯示：brown-左, blue-右, pink-右
- blue 和 pink 的寬度相加未超過父層寬度，因此 blue, pink 顯示在同一列
- brown 的寬度 > 父層的寬度，因此，blue 和 pink 被折到下一列顯示

--- a/marathon/float-card-left-and-right.html
+++ b/marathon/float-card-left-and-right.html
@@ -12,26 +12,38 @@
       width: 500px;
       height: 500px;
       border: burlywood 2px solid;
+      direction: rtl;
     }
     .box{
-      width: 50%;
       height: 50%;
       font-size: 48px;
     }
+  
     .brown{
+      width: 120%;
       background-color: brown;
       float: left;
     }
     .blue{
+      width: 60%;
       background-color: lightblue;
       float: right;
     }
+    .pink{
+      width: 40%;
+      background-color: pink;
+      float: right;
+
+    }
+    
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="box brown">1</div>
     <div class="box blue">2</div>
+    <div class="box pink">3</div>
+
   </div>
 </body>
 </html>
