刪除: 父層和子層的高度，觀看父層的高度
-  子層的內容將子層的高度撐開
-  子層設定 float 的關係，無法觀看到父層的背景顏色 (#aaa)
-  換句話說，子層浮動時，父層會抓不到浮動的子層物件的高度

--- a/marathon/float-card-left-and-right.html
+++ b/marathon/float-card-left-and-right.html
@@ -10,12 +10,9 @@
     .wrap{
       margin: 10px auto;
       width: 500px;
-      height: 500px;
-      border: burlywood 2px solid;
-      direction: rtl;
+      background-color: #aaa;
     }
     .box{
-      height: 50%;
       font-size: 48px;
     }
   
@@ -33,9 +30,7 @@
       width: 40%;
       background-color: pink;
       float: right;
-
     }
-    
   </style>
 </head>
 <body>
@@ -43,6 +38,7 @@
     <div class="box brown">1</div>
     <div class="box blue">2</div>
     <div class="box pink">3</div>
+    <div class="float-fix"></div>
 
   </div>
 </body>
