增加：父層 padding 和 brown的透明度，用於檢視父層背景
-  父層確實有背景色，由於子層浮動時，父層會抓不到浮動的子層物件的高度

--- a/marathon/float-card-left-and-right.html
+++ b/marathon/float-card-left-and-right.html
@@ -11,6 +11,7 @@
       margin: 10px auto;
       width: 500px;
       background-color: #aaa;
+      padding: 10px;
     }
     .box{
       font-size: 48px;
@@ -20,6 +21,7 @@
       width: 120%;
       background-color: brown;
       float: left;
+      opacity: .3;
     }
     .blue{
       width: 60%;
