--- a/marathon/float-card-left-and-right.html
+++ b/marathon/float-card-left-and-right.html
@@ -18,7 +18,7 @@
     }
   
     .brown{
-      width: 120%;
+      width: 80%;
       background-color: brown;
       float: left;
       opacity: .3;
@@ -32,6 +32,9 @@
       width: 40%;
       background-color: pink;
       float: right;
+    }
+    .float-fix{
+      clear: both;
     }
   </style>
 </head>
