--- a/marathon/pic-large-float.html
+++ b/marathon/pic-large-float.html
@@ -7,7 +7,17 @@
   <title>box-sizing</title>
   <link rel="stylesheet" href="../reset.css">
   <style>
-    
+    .wrap{
+      margin: 10px auto;
+      /* 500 = 10*2 + 3*2 + 474 */
+      box-sizing: border-box;
+      border: green 3px solid;
+      padding: 10px;
+      width: 474px;
+    }
+    a{
+      display: block;
+    }
   </style>
 </head>
 <body>
