新增：pic-large-float > 填入資料

--- a/marathon/pic-large-float.html
+++ b/marathon/pic-large-float.html
@@ -24,14 +24,15 @@
   <div class="wrap">
     <!-- 點擊區 -->
     <a class="pic" href="#">
-      <div class="icon-title"></div>
+      <p class="icon-title">其他</p>
       <!-- 點擊圖片區 -->
-      <img src="" alt="">
+      <img src="./asset 27.jpeg" alt="">
       <!-- 點擊文字區 -->
       <div class="text-area">
-        <p class="bold"></p>
+        <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
         <p class="thin">
-          <span class="date"></span>
+          UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
+          <span class="date">2022/01/28</span>
         </p>
         
       </div>
