變更：pic-large-float > content-box，超連結屬性設定
-  注 box-sizing 設定的寬度等於 content-box 或 border-box
-  文字產生底線是超連結的關係，text-decoration: none; 寫於 超連結css 設定內

--- a/marathon/pic-large-float.html
+++ b/marathon/pic-large-float.html
@@ -10,13 +10,24 @@
     .wrap{
       margin: 10px auto;
       /* 500 = 10*2 + 3*2 + 474 */
-      box-sizing: border-box;
       border: green 3px solid;
       padding: 10px;
       width: 474px;
     }
+    .wrap a{
+      text-decoration: none;
+    }
     a{
       display: block;
+      width: 474px;
+    }
+    a img{
+      width: 474px;
+      vertical-align: middle;
+    }
+    .icon-title{
+      padding: 10px 0;
+
     }
   </style>
 </head>
