--- a/marathon/pic-small-float.html
+++ b/marathon/pic-small-float.html
@@ -7,6 +7,25 @@
   <title>small box use float</title>
   <link rel="stylesheet" href="../reset.css">
   <style>
+    .wrap{
+      margin: 10px auto;
+      /* 500 = 10*2 + 3*2 + 474 */
+      border: green 3px solid;
+      padding: 10px;
+      width: 474px;
+    }
+    .container{
+      display: block;
+      width: 474px;
+    }
+    .container img{
+      width: calc(50% - 10px);
+      padding: 10px 0;
+      vertical-align: middle;
+    }
+    .text-area {
+      background-color: #ccc;
+    }
 
   </style>
 </head>
