--- a/marathon/pic-small-float.html
+++ b/marathon/pic-small-float.html
@@ -14,18 +14,27 @@
       padding: 10px;
       width: 474px;
     }
+    .small-box{
+      width: calc(50% - 10px);
+    }
     .container{
       display: block;
       width: 474px;
+      text-decoration: none;
     }
     .container img{
       width: calc(50% - 10px);
       padding: 10px 0;
       vertical-align: middle;
     }
-    .text-area {
+    .container .text-area {
+      width: calc(50% - 10px);
       background-color: #ccc;
     }
+    .text-area .bold, .text-area .date{
+      padding: 10px 0;
+    }
+    
 
   </style>
 </head>
@@ -34,13 +43,15 @@
     <!-- 點擊區 -->
     <div class="small-box">
       <a class="container" href="#">
-        <p class="icon-title"></p>
+        <p class="icon-title">文化</p>
         <!-- 點擊圖片區 -->
-        <img src="" alt="">
+        <img src="asset 29.png" alt="">
         <!-- 點擊文字區 -->
         <div class="text-area">
-          <p class="bold"></p>
-          <span class="date"></span>
+          <p class="bold">「E Ulu A Paʻa」～ビショップ ミュージアム が年に一度のファンドレイジングを開催！～</p>
+          <p class="thin">
+            <span class="date">2022/08/12</span>
+          </p>
         </div>
       </a>
     </div>
